[package]
name = "rllvm-as"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
inkwell = { path = "./inkwell", features=["llvm17-0"] }
walkdir = "2.4.0"
